Bug 169821 - Vertical text disappears fom table when page line-spacing is enabled.
Summary: Vertical text disappears fom table when page line-spacing is enabled.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.6.2 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:26.8.0
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-04 09:47 UTC by Tamás Zolnai
Modified: 2026-01-21 10:35 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Test document for reproduction. (10.54 KB, application/vnd.oasis.opendocument.text)
2025-12-04 09:47 UTC, Tamás Zolnai
Details
Screen recording of the issue (1.89 MB, video/mp4)
2025-12-04 09:49 UTC, Tamás Zolnai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2025-12-04 09:47:18 UTC
Description:
I noticed that if I apply a style to a vertical text inside a table and if that style has page line-spacing enabled, the text disappears from the table (I assume it's rendered outside of the table's rendering area).

I don't think vertical text should be affected by the page line-spacing option. At least I don't see how a vertical text could be reasonably aligned with the invisible grid of the page line-spacing option.

Steps to Reproduce:
1. Open the attached test document
  -> The test document contains a table. The page has page line-spacing enabled.
2. Open Styles sidebar: Styles -> Manage Styles menu
3. Select text in the table so the style side pane selects the relevant style. (Table Contents).
4. Click on the Table Content style with the right mouse button and select Edit Style.
5. Go "Indents & Spacing" tab and check "Active page line-spacing" checkbox.
6. Push Apply or OK
-> Vertical text is gone.

Actual Results:
Vertical text disappears from the table.

Expected Results:
Vertical text should still be visible inside the table.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.2.6.2 (X86_64) / LibreOffice Community
Build ID: 729c5bfe710f5eb71ed3bbde9e06a6065e9c6c5d
CPU threads: 8; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-GB (en_GB); UI: en-GB
Calc: CL threaded
Comment 1 Tamás Zolnai 2025-12-04 09:47:55 UTC
Created attachment 204425 [details]
Test document for reproduction.
Comment 2 Tamás Zolnai 2025-12-04 09:49:36 UTC
Created attachment 204426 [details]
Screen recording of the issue
Comment 3 m_a_riosv 2025-12-04 22:31:51 UTC
Reproducible

Version: 26.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: threaded
AND
Version: 7.6.7.2 (X86_64) / LibreOffice Community
Build ID: dd47e4b30cb7dab30588d6c79c651f218165e3c5
CPU threads: 16; OS: Windows 10.0 Build 26200; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 4 Commit Notification 2026-01-21 10:34:42 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a967abc63f7962639e88624cfe3bb545a10e9efa

tdf#169821: Ignore vertical text when applying page line-spacing.

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.