tdf#169821: Ignore vertical text when applying page line-spacing.

It does not make sense to try to align vertical text to a horizontal
grid line. The text formatter code attempted to align the text to the
baseline grid, which led to an integer underflow for top-to-bottom text,
resulting in a line height of -64667.

Change-Id: Id51a3f6215b54bc9831bb3975d14e1cd3f343f07
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197655
Tested-by: Jenkins
Reviewed-by: Tamás Zolnai <zolnaitamas2000@gmail.com>